fix: avoid additional height space on mobile

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -2,6 +2,7 @@
 
 .min-h-screen {
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 html {
